fix bug on deletion datafield and nodetype; add nodetype parent in ouput data

--- a/create-network.ipynb
+++ b/create-network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,23 @@
     "    {\"label\": \"Select\", \"value\": \"select\"},\n",
     "]\n",
     "\n",
-    "USERNAME = \"contemptible-keeping\"\n",
-    "PASSWORD = \"y2ebP9TCisagk3CvCe8FILfczoAIBUUB\"\n",
+    "# USERNAME = \"contemptible-keeping\"\n",
+    "# PASSWORD = \"y2ebP9TCisagk3CvCe8FILfczoAIBUUB\"\n",
+    "# USERNAME = \"said-clipping\"\n",
+    "# PASSWORD = \"aJ1EESCHFC3i2lUIXAES2gnVm4FqYjtb\"\n",
+    "USERNAME = \"possessive-league\"\n",
+    "PASSWORD = \"HyDyFLRzN0a2DyFI1p0x5lgTc2QNej1J\"\n",
     "\n",
     "BASE_URL = \"http://localhost:2525\"\n",
-    "# BASE_URL = \"https://network-core-system-production.up.railway.app\""
+    "# BASE_URL = \"https://network-core-system-production.up.railway.app\"\n",
+    "# BASE_URL = \"http://45.136.19.222:2525\"\n",
+    "\n",
+    "CREATE_INDIVIDUALS = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,15 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder created: data/20250113112728_ratably\n",
-      "Entity ratably created successfully.\n"
+      "Folder created: data/20250122161544_inoperativeness\n",
+      "Entity inoperativeness created successfully.\n"
      ]
     }
    ],
@@ -359,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution channel Channel ratably webbing created successfully.\n"
+      "Distribution channel Channel inoperativeness polyplectron created successfully.\n"
      ]
     }
    ],
@@ -389,16 +396,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node type chuffest created successfully.\n",
-      "Node type didus created successfully.\n",
-      "Node type lonely created successfully.\n"
+      "Node type overlively created successfully.\n",
+      "Node type idlemen created successfully.\n",
+      "Node type survival created successfully.\n"
      ]
     }
    ],
@@ -428,14 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution channel 6 retrieved successfully.\n"
+      "Distribution channel 2 retrieved successfully.\n"
      ]
     }
    ],
@@ -453,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -481,27 +488,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data field corseleted created successfully.\n",
-      "Data field heathenship created successfully.\n",
-      "Data field drillability created successfully.\n",
-      "Node type 13 retrieved successfully.\n",
+      "Data field tampoe created successfully.\n",
+      "Data field bandie created successfully.\n",
+      "Data field colonialism created successfully.\n",
+      "Node type 4 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Data field whaly created successfully.\n",
-      "Data field postcibal created successfully.\n",
-      "Data field reverseful created successfully.\n",
-      "Node type 14 retrieved successfully.\n",
+      "Data field triplexity created successfully.\n",
+      "Data field ouakari created successfully.\n",
+      "Data field fraternizing created successfully.\n",
+      "Node type 5 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Data field pseudophellandrene created successfully.\n",
-      "Data field throb created successfully.\n",
-      "Data field instable created successfully.\n",
-      "Node type 15 retrieved successfully.\n",
+      "Data field syncope created successfully.\n",
+      "Data field trisplanchnic created successfully.\n",
+      "Data field automania created successfully.\n",
+      "Node type 6 retrieved successfully.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -529,27 +536,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node Node chuffest supraintellectual created successfully.\n",
-      "Node Node chuffest dishonoring created successfully.\n",
-      "Node type 13 retrieved successfully.\n",
+      "Node Node overlively parallelotropism created successfully.\n",
+      "Node Node overlively uncontent created successfully.\n",
+      "Node type 4 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Node Node didus finalities created successfully.\n",
-      "Node Node didus geotonic created successfully.\n",
-      "Node Node didus delectation created successfully.\n",
-      "Node type 14 retrieved successfully.\n",
+      "Node Node idlemen jeffersonians created successfully.\n",
+      "Node Node idlemen toolroom created successfully.\n",
+      "Node Node idlemen fusional created successfully.\n",
+      "Node type 5 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Node Node lonely similate created successfully.\n",
-      "Node Node lonely macaasim created successfully.\n",
-      "Node Node lonely clubdom created successfully.\n",
-      "Node Node lonely pectolite created successfully.\n",
-      "Node type 15 retrieved successfully.\n",
+      "Node Node survival redamaging created successfully.\n",
+      "Node Node survival unroaded created successfully.\n",
+      "Node Node survival unfostered created successfully.\n",
+      "Node Node survival eutaxies created successfully.\n",
+      "Node type 6 retrieved successfully.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -596,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -645,67 +652,68 @@
     }
    ],
    "source": [
-    "for i in range(len(node_type_datas)):\n",
-    "    r_node_type = load_json(os.path.join(\n",
-    "        folder_path, f\"node_type_{i}.json\"))\n",
-    "    node_type_data = r_node_type.get(\"data\")\n",
+    "if CREATE_INDIVIDUALS:\n",
+    "    for i in range(len(node_type_datas)):\n",
+    "        r_node_type = load_json(os.path.join(\n",
+    "            folder_path, f\"node_type_{i}.json\"))\n",
+    "        node_type_data = r_node_type.get(\"data\")\n",
     "\n",
-    "    nodes = node_type_data.get(\"Node\")\n",
-    "    data_fields = node_type_data.get(\"DataField\")\n",
-    "    # recuperer que ceux dont le fillingType est automatic ou mixed\n",
-    "    data_fields = [data_field for data_field in data_fields if data_field.get(\n",
-    "        \"fillingType\") in [\"automatic\", \"mixed\"]]\n",
+    "        nodes = node_type_data.get(\"Node\")\n",
+    "        data_fields = node_type_data.get(\"DataField\")\n",
+    "        # recuperer que ceux dont le fillingType est automatic ou mixed\n",
+    "        data_fields = [data_field for data_field in data_fields if data_field.get(\n",
+    "            \"fillingType\") in [\"automatic\", \"mixed\"]]\n",
     "\n",
-    "    for j, node in enumerate(nodes):\n",
-    "        data = {}\n",
-    "        for data_field in data_fields:\n",
-    "            data[data_field.get(\"slug\")] = generate_random_value(\n",
-    "                data_field.get(\"dataFieldType\").get(\"value\"))\n",
+    "        for j, node in enumerate(nodes):\n",
+    "            data = {}\n",
+    "            for data_field in data_fields:\n",
+    "                data[data_field.get(\"slug\")] = generate_random_value(\n",
+    "                    data_field.get(\"dataFieldType\").get(\"value\"))\n",
     "\n",
-    "        r_individual = create_individual(node.get(\"id\"), data, jwt_token)\n",
-    "        # juste utile pour debuggage\n",
-    "        # save_json(r_individual, os.path.join(\n",
-    "        #     folder_path, \"individual_of_{}.json\".format(node.get(\"value\"))))\n",
-    "        # save_json(r_individual, os.path.join(\n",
-    "        #     folder_path, f\"individual_{i}_{j}.json\"))\n",
+    "            r_individual = create_individual(node.get(\"id\"), data, jwt_token)\n",
+    "            # juste utile pour debuggage\n",
+    "            # save_json(r_individual, os.path.join(\n",
+    "            #     folder_path, \"individual_of_{}.json\".format(node.get(\"value\"))))\n",
+    "            # save_json(r_individual, os.path.join(\n",
+    "            #     folder_path, f\"individual_{i}_{j}.json\"))\n",
     "\n",
-    "    print('-'*50)"
+    "        print('-'*50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[\n",
-    "    {\n",
-    "        expanded: true,\n",
-    "        type: 'person',\n",
-    "        data: {\n",
-    "            name: 'Amy Elsner',\n",
-    "            title: 'CEO'\n",
-    "        },\n",
-    "        children: [\n",
-    "            {\n",
-    "                expanded: true,\n",
-    "                type: 'person',\n",
-    "                data: {\n",
-    "                    name: 'Anna Fali',\n",
-    "                    title: 'CMO'\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                expanded: true,\n",
-    "                type: 'person',\n",
-    "                data: {\n",
-    "                    name: 'Stephen Shaw',\n",
-    "                    title: 'CTO'\n",
-    "                }\n",
-    "            }\n",
-    "        ]\n",
-    "    }\n",
-    "]"
+    "# [\n",
+    "#     {\n",
+    "#         expanded: true,\n",
+    "#         type: 'person',\n",
+    "#         data: {\n",
+    "#             name: 'Amy Elsner',\n",
+    "#             title: 'CEO'\n",
+    "#         },\n",
+    "#         children: [\n",
+    "#             {\n",
+    "#                 expanded: true,\n",
+    "#                 type: 'person',\n",
+    "#                 data: {\n",
+    "#                     name: 'Anna Fali',\n",
+    "#                     title: 'CMO'\n",
+    "#                 }\n",
+    "#             },\n",
+    "#             {\n",
+    "#                 expanded: true,\n",
+    "#                 type: 'person',\n",
+    "#                 data: {\n",
+    "#                     name: 'Stephen Shaw',\n",
+    "#                     title: 'CTO'\n",
+    "#                 }\n",
+    "#             }\n",
+    "#         ]\n",
+    "#     }\n",
+    "# ]"
    ]
   }
  ],
