add first children of an channel

--- a/create-network.ipynb
+++ b/create-network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
     "# BASE_URL = \"https://network-core-system-production.up.railway.app\"\n",
     "# BASE_URL = \"http://45.136.19.222:2525\"\n",
     "\n",
-    "CREATE_INDIVIDUALS = False"
+    "CREATE_INDIVIDUALS = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,15 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder created: data/20250122161544_inoperativeness\n",
-      "Entity inoperativeness created successfully.\n"
+      "Folder created: data/20250123211020_illogic\n",
+      "Entity illogic created successfully.\n"
      ]
     }
    ],
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution channel Channel inoperativeness polyplectron created successfully.\n"
+      "Distribution channel Channel illogic suggestion created successfully.\n"
      ]
     }
    ],
@@ -396,34 +396,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node type overlively created successfully.\n",
-      "Node type idlemen created successfully.\n",
-      "Node type survival created successfully.\n"
+      "Node type pivotman created successfully.\n",
+      "Node type disforest created successfully.\n",
+      "Node type protuberance created successfully.\n"
      ]
     }
    ],
    "source": [
     "node_type_datas = []\n",
     "\n",
+    "node_type_parent_id = 0\n",
     "for i in range(NODE_TYPE_NUMBER):\n",
     "    node_type_name = get_random_word()\n",
-    "    node_type_parent_id = 0\n",
-    "    \n",
-    "    r_node_type = create_node_type(node_type_name, distribution_channel_data.get(\"id\"))\n",
+    "\n",
+    "    r_node_type = create_node_type(\n",
+    "        node_type_name,\n",
+    "        distribution_channel_data.get(\"id\"),\n",
+    "        node_type_parent_id\n",
+    "    )\n",
     "    node_type_data = r_node_type.get(\"data\")\n",
     "    node_type_datas.append(node_type_data)\n",
-    "    \n",
+    "\n",
     "    node_type_parent_id = node_type_data.get(\"id\")\n",
-    "    \n",
+    "\n",
     "    # juste utile pour debuggage\n",
-    "    # save_json(r_node_type, os.path.join(folder_path, f\"node_type_{i}.json\"))\n"
+    "    # save_json(r_node_type, os.path.join(folder_path, f\"node_type_{i}.json\"))"
    ]
   },
   {
@@ -435,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distribution channel 2 retrieved successfully.\n"
+      "Distribution channel 4 retrieved successfully.\n"
      ]
     }
    ],
@@ -460,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -488,27 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data field tampoe created successfully.\n",
-      "Data field bandie created successfully.\n",
-      "Data field colonialism created successfully.\n",
-      "Node type 4 retrieved successfully.\n",
+      "Data field levelly created successfully.\n",
+      "Data field unsorry created successfully.\n",
+      "Data field phalluses created successfully.\n",
+      "Node type 10 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Data field triplexity created successfully.\n",
-      "Data field ouakari created successfully.\n",
-      "Data field fraternizing created successfully.\n",
-      "Node type 5 retrieved successfully.\n",
+      "Data field airbag created successfully.\n",
+      "Data field lungwort created successfully.\n",
+      "Data field reconsiders created successfully.\n",
+      "Node type 11 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Data field syncope created successfully.\n",
-      "Data field trisplanchnic created successfully.\n",
-      "Data field automania created successfully.\n",
-      "Node type 6 retrieved successfully.\n",
+      "Data field overelaborately created successfully.\n",
+      "Data field islandology created successfully.\n",
+      "Data field kitties created successfully.\n",
+      "Node type 12 retrieved successfully.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -536,27 +540,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node Node overlively parallelotropism created successfully.\n",
-      "Node Node overlively uncontent created successfully.\n",
-      "Node type 4 retrieved successfully.\n",
+      "Node Node pivotman arabinosic created successfully.\n",
+      "Node Node pivotman fishline created successfully.\n",
+      "Node type 10 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Node Node idlemen jeffersonians created successfully.\n",
-      "Node Node idlemen toolroom created successfully.\n",
-      "Node Node idlemen fusional created successfully.\n",
-      "Node type 5 retrieved successfully.\n",
+      "Node Node disforest anxiously created successfully.\n",
+      "Node Node disforest postparalytic created successfully.\n",
+      "Node Node disforest tablemount created successfully.\n",
+      "Node type 11 retrieved successfully.\n",
       "--------------------------------------------------\n",
-      "Node Node survival redamaging created successfully.\n",
-      "Node Node survival unroaded created successfully.\n",
-      "Node Node survival unfostered created successfully.\n",
-      "Node Node survival eutaxies created successfully.\n",
-      "Node type 6 retrieved successfully.\n",
+      "Node Node protuberance oculina created successfully.\n",
+      "Node Node protuberance jargonisation created successfully.\n",
+      "Node Node protuberance gorgonin created successfully.\n",
+      "Node Node protuberance urethra created successfully.\n",
+      "Node type 12 retrieved successfully.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -603,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -643,10 +647,10 @@
       "Individual created successfully.\n",
       "Individual created successfully.\n",
       "--------------------------------------------------\n",
-      "Individual created successfully.\n",
-      "Individual created successfully.\n",
-      "Individual created successfully.\n",
-      "Individual created successfully.\n",
+      "Failed to create individual.\n",
+      "Failed to create individual.\n",
+      "Failed to create individual.\n",
+      "Failed to create individual.\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -682,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
